[gd_scene load_steps=4 format=2]

[ext_resource path="res://ANT_man.png" type="Texture" id=1]
[ext_resource path="res://CEREBRO.jpg" type="Texture" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="SpriteCEREBRO" type="Sprite" parent="."]
position = Vector2( 1553, 489 )
scale = Vector2( 1, 1 )
texture = ExtResource( 2 )

[node name="SpriteANT" type="Sprite" parent="."]
position = Vector2( 294, 506 )
scale = Vector2( 0.375781, 0.362664 )
texture = ExtResource( 1 )

[node name="ButtonMoverX" type="Button" parent="."]
margin_left = 296.0
margin_top = 45.0
margin_right = 360.0
margin_bottom = 65.0
rect_scale = Vector2( 4, 4 )
text = "Mover X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDiminuir" type="Button" parent="."]
margin_left = 1373.0
margin_top = 45.0
margin_right = 1441.0
margin_bottom = 66.0
rect_scale = Vector2( 4, 4 )
text = "Diminuir"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonMoverX" to="." method="_on_ButtonMoverX_pressed"]
[connection signal="pressed" from="ButtonDiminuir" to="." method="_on_ButtonDiminuir_pressed"]
